--- a/src/components/code/code-other/pages/elem-linux.html
+++ b/src/components/code/code-other/pages/elem-linux.html
@@ -6,6 +6,7 @@
   <h2>Содержание</h2>
 
   <p><a href="#links">links</a></p>
+  <p><a href="#install">install</a></p>
   <p><a href="#cmd">Командная строка linux</a></p>
 
 </article>
@@ -25,6 +26,29 @@
 </article>
 
 
+<!-- install -->
+<article class="article">
+  <div class="anchor" id="install"></div>
+  <h2>install</h2>
+
+  <ol>
+    <li><a href="https://drive.google.com/drive/folders/1JauDLOONYOYt2q5Nq5ppgoFJJcsfH36t">https://drive.google.com/drive/folders/1JauDLOONYOYt2q5Nq5ppgoFJJcsfH36t</a> google disc Windows 10 & Windows 11</li>
+    <li><a href="https://learn.microsoft.com/en-us/windows-server/get-started/kms-client-activation-keys?tabs=server2022%2Cwindows10ltsc%2Cversion1803%2Cwindows81">https://learn.microsoft.com/en-us/windows-server/get-started/kms-client-activation-keys</a> Сайт с ключами от винды</li>
+    <li><a href="https://msguides.com/windows-11">https://msguides.com/windows-11</a> гайд на активацию с применением нужного ключа</li>
+  </ol>
+  <ol>
+    <li>
+      <h4>Установить VirtualBox</h4>
+      <p><a href="https://www.virtualbox.org/wiki/Downloads">https://www.virtualbox.org/wiki/Downloads</a></p>
+    </li>
+    <li>
+      <h4>Установить Ubuntu</h4>
+      <p><a href="https://ubuntu.com/download">https://ubuntu.com/download</a></p>
+    </li>
+  </ol>
+</article>
+
+
 <!-- Командная строка linux -->
 <article class="article">
   <div class="anchor" id="cmd"></div>
@@ -41,6 +65,12 @@
     <dd>выводит на экран содержимое файла</dd>
     <dt>chmod</dt>
     <dd>изменяет права доступа к объекту</dd>
+    <dt>shutdown now</dt>
+    <dd>корректно завершить систему и выключить компьютер</dd>
+    <dt>shutdown -r now</dt>
+    <dd>перезапустить систему</dd>
+    <dt>reboot</dt>
+    <dd>перезапустить систему</dd>
   </dl>
 </article>
 
