--- a/src/components/front/front-framework/pages/elem-angular.html
+++ b/src/components/front/front-framework/pages/elem-angular.html
@@ -1,26 +1,19 @@
 <h1>Angular</h1>
 
-<!-- Заголовок -->
-<div class="article">
-  <div class="anchor" id="content"></div>
-  <h2>Содержание</h2>
-</div>
 
 <!-- Содержание -->
-<div class="article article__content">
+<article class="article">
+  <h2>Содержание</h2>
 
-  <div>
-    <p><a href="#links">links</a></p>
-    <p><a href="#about">about</a></p>
-    <p><a href="#install">install</a></p>
-    <p><a href="#gh-pages">Деплой angular проекта на github</a></p>
-    <p><a href="#files">Структура проекта</a></p>
-    <p><a href="#start">Начало работы</a></p>
-    <p><a href="#ng-build">Сборка проекта</a></p>
-    <p><a href="#errors">Ошибки при сборке проекта</a></p>
-  </div>
-
-</div>
+  <p><a href="#links">links</a></p>
+  <p><a href="#about">about</a></p>
+  <p><a href="#install">install</a></p>
+  <p><a href="#gh-pages">Деплой angular проекта на github</a></p>
+  <p><a href="#files">Структура проекта</a></p>
+  <p><a href="#start">Начало работы</a></p>
+  <p><a href="#ng-build">Сборка проекта</a></p>
+  <p><a href="#errors">Ошибки при сборке проекта</a></p>
+</article>
 
 
 <!-- links -->
@@ -189,8 +182,8 @@
       создастся<code>ng g c components/comp</code>(сокращенно от ng generate component components/comp)</p>
   <p>В папке components получим новые файлы компонента comp
     <code>
-      comp.component.html 
-      <br>comp.component.scss 
+      comp.component.html
+      <br>comp.component.scss
       <br>comp.component.ts
     </code>
   </p>
