--- a/src/components/front/front-net/pages/elem-http.html
+++ b/src/components/front/front-net/pages/elem-http.html
@@ -1,31 +1,24 @@
 <h1>HTTP протокол</h1>
 
-<!-- Заголовок -->
-<div class="article">
-  <div class="anchor" id="content"></div>
-  <h2>Содержание</h2>
-</div>
 
 <!-- Содержание -->
-<div class="article article__content">
+<article class="article">
+  <h2>Содержание</h2>
 
-  <div>
-    <p><a href="#links">links</a></p>
-    <p><a href="#about">Что такое HTTP</a></p>
-    <p><a href="#consist">Из чего состоит HTTP</a></p>
-    <p><a href="#work">Как работает HTTP</a></p>
-    <p><a href="#request">Структура HTTP запроса</a>
-    <br> - <a href="#start-line">Стартовая строка (Start line)</a>
-    <br> - <a href="#method">Методы в стартовой строке</a>
-    <br> - <a href="#url">URL в стартовой строке</a>
-    <br> - <a href="#version">Версии HTTP</a>
-    <br> - <a href="#http-headers">Заголовки HTTP (HTTP Headers)</a></p>
-    <p><a href="#response">Структура HTTP ответа</a>
-    <br> - <a href="#status-line">Строка статуса (Status line)</a>
-    <br> - <a href="#status-code">Код состояния (Status code)</a></p>
-  </div>
-
-</div>
+  <p><a href="#links">links</a></p>
+  <p><a href="#about">Что такое HTTP</a></p>
+  <p><a href="#consist">Из чего состоит HTTP</a></p>
+  <p><a href="#work">Как работает HTTP</a></p>
+  <p><a href="#request">Структура HTTP запроса</a>
+  <br> - <a href="#start-line">Стартовая строка (Start line)</a>
+  <br> - <a href="#method">Методы в стартовой строке</a>
+  <br> - <a href="#url">URL в стартовой строке</a>
+  <br> - <a href="#version">Версии HTTP</a>
+  <br> - <a href="#http-headers">Заголовки HTTP (HTTP Headers)</a></p>
+  <p><a href="#response">Структура HTTP ответа</a>
+  <br> - <a href="#status-line">Строка статуса (Status line)</a>
+  <br> - <a href="#status-code">Код состояния (Status code)</a></p>
+</article>
 
 
 <!-- links -->
@@ -53,7 +46,7 @@
   <p>Протокол HTTP используют ещё с 1992 года. Он очень простой, но при этом довольно функциональный. А ещё HTTP находится на самой вершине модели OSI (на прикладном уровне), где приложения обмениваются друг с другом данными. А работает HTTP с помощью протоколов TCP/IP и использует их, чтобы передавать данные.</p>
 
   <p>Кроме HTTP в интернете работает ещё протокол HTTPS. Аббревиатура расшифровывается как «защищённый протокол передачи гипертекста» (или HyperText Transfer Protocol Secure). Он нужен для безопасной передачи данных по Сети. Всё происходит по тем же принципам, как и у HTTP, правда, перед отправкой данные дополнительно шифруются, а затем расшифровываются на сервере.</p>
-  
+
   <p>Например, HTTPS используют во время ввода данных банковской карты или паролей на сайтах — да и в целом большинство современных сайтов используют именно его.</p>
 </article>
 
@@ -70,7 +63,7 @@
   <p>Клиентом может быть любое устройство, через которое пользователь запрашивает данные. Часто в роли клиента выступает веб-браузер, программы для отладки приложений или даже командная строка. Главная особенность клиента — он всегда инициирует запрос.</p>
 
   <p>Сервер — это устройство, которое обрабатывает запросы клиента. Он может состоять как из одного компьютера, так и из кластера. А ещё несколько виртуальных серверов могут находиться на одной физической машине.</p>
-  
+
   <p>Прокси-серверы — это второстепенные серверы, которые располагаются между клиентом и главным сервером. Они обрабатывают HTTP-запросы, а также ответы на них. Чаще всего прокси-серверы используют для кэширования и сжатия данных, обхода ограничений и анонимных запросов. И ещё — обычно между клиентом и основным сервером находится один или несколько таких прокси-серверов.</p>
 </article>
 
@@ -81,7 +74,7 @@
   <h2>Как работает HTTP</h2>
 
   <p>Весь процесс передачи HTTP-запроса можно разбить на семь шагов. Давайте разберём их подробнее.</p>
-  
+
   <ol>
     <li>
       <h3>Шаг первый — вписываем URL в браузер</h3>
@@ -580,7 +573,7 @@
 <article class="article">
   <div class="anchor" id="code-1xx"></div>
   <h2>1xx. Информационные ответы</h2>
-  
+
   <ul>
     <li>100 Continue (Продолжить). Промежуточный ответ, который говорит о том, что запрос успешно принят.</li>
     <li>101 Switching Protocol (Переключился протокол). Присылается в ответ на запрос, в котором есть заголовок Upgrade. Это означает, что сервер переключился на протокол, который был указан в заголовке. Такая методика используется, например, для переключения на протокол Websocket.</li>
