--- a/src/components/front/front-net/pages/elem-osi-model.html
+++ b/src/components/front/front-net/pages/elem-osi-model.html
@@ -1,28 +1,21 @@
 <h1>OSI Model</h1>
 
-<!-- Заголовок -->
-<div class="article">
-  <div class="anchor" id="content"></div>
-  <h2>Содержание</h2>
-</div>
 
 <!-- Содержание -->
-<div class="article article__content">
+<article class="article">
+  <h2>Содержание</h2>
 
-  <div>
-    <p><a href="#links">links</a></p>
-    <p><a href="#about">Что такое модель OSI</a></p>
-    <p><a href="#l1">1. физический уровень (physical layer)</a></p>
-    <p><a href="#l2">2. канальный уровень (data link layer)</a></p>
-    <p><a href="#l3">3. сетевой уровень (network layer)</a></p>
-    <p><a href="#l4">4. транспортный уровень (transport layer)</a></p>
-    <p><a href="#l5">5. сеансовый уровень (session layer)</a></p>
-    <p><a href="#l6">6. уровень представления данных (presentation layer)</a></p>
-    <p><a href="#l7">7. прикладной уровень (application layer)</a></p>
-    <p><a href="#how-work">Как на практике работает сетевая модель OSI</a></p>
-  </div>
-
-</div>
+  <p><a href="#links">links</a></p>
+  <p><a href="#about">Что такое модель OSI</a></p>
+  <p><a href="#l1">1. физический уровень (physical layer)</a></p>
+  <p><a href="#l2">2. канальный уровень (data link layer)</a></p>
+  <p><a href="#l3">3. сетевой уровень (network layer)</a></p>
+  <p><a href="#l4">4. транспортный уровень (transport layer)</a></p>
+  <p><a href="#l5">5. сеансовый уровень (session layer)</a></p>
+  <p><a href="#l6">6. уровень представления данных (presentation layer)</a></p>
+  <p><a href="#l7">7. прикладной уровень (application layer)</a></p>
+  <p><a href="#how-work">Как на практике работает сетевая модель OSI</a></p>
+</article>
 
 
 <!-- links -->
