--- a/src/components/front/front-net/pages/elem-ssl.html
+++ b/src/components/front/front-net/pages/elem-ssl.html
@@ -1,21 +1,14 @@
 <h1>SSL (Secure Sockets Layer)</h1>
 
-<!-- Заголовок -->
-<div class="article">
-  <div class="anchor" id="content"></div>
-  <h2>Содержание</h2>
-</div>
 
 <!-- Содержание -->
-<div class="article article__content">
+<article class="article">
+  <h2>Содержание</h2>
 
-  <div>
-    <p><a href="#links">links</a></p>
-    <p><a href="#ssl">SSL-сертификат</a></p>
-    <p><a href="#protocol">SSL протокол</a></p>
-  </div>
-
-</div>
+  <p><a href="#links">links</a></p>
+  <p><a href="#ssl">SSL-сертификат</a></p>
+  <p><a href="#protocol">SSL протокол</a></p>
+</article>
 
 
 <!-- links -->
@@ -77,22 +70,22 @@
 
   <h3>Зачем нужен SSL-сертификат</h3>
   <p>Они нужны сайтам, чтобы подтвердить безопасность передачи данных от пользователей на сервер, а также чтобы указать права собственности и не допустить его подделки злоумышленниками. В каком-то смысле это юридически заверенный договор, который сайт подписывает, чтобы доказать свою честность.</p>
-  
+
   <p>Сайтам важно сохранять конфиденциальность данных и гарантировать пользователям безопасность их ввода. Например, если нужно ввести пароль или данные банковской карты, то пользователи будут доверять только тем сайтам, которые прошли проверку. SSL как раз помогают удостоверить это.</p>
 
   <p>Крупным компаниям сертификаты полезны тем, что они предоставляют доступ к HTTPS-протоколу. Он использует все функции протокола HTTP, но при этом шифрует данные с помощью протокола SSL. Браузеры даже помечают сайты с протоколом HTTP как небезопасные, что может стать тревожным сигналом для пользователей и вызвать недоверие — особенно при вводе персональных данных.</p>
-  
+
   <h3>Кто выдаёт SSL-сертификаты и какие они бывают</h3>
   <p>Получить их можно в центрах сертификации, которые ещё называют удостоверяющими центрами. Среди самых крупных из них — DigiCert, Symantec, GlobalSign. Все они занимаются подтверждением ключей для шифрования. Чтобы получить сертификат, придётся заплатить деньги, зато вы будете уверены в его подлинности.</p>
-  
+
   <p>Сертификаты от этих компаний идут вместе с печатью доверия. Она подтверждает, что соединение надёжно защищено.</p>
-  
+
   <p>SSL-сертификат можно получить бесплатно — например, через сервисы Cloudflare и Let’s Encrypt. Они выдают их на три месяца, а затем их нужно будет продлить. Но есть несколько нюансов, которые стоит учесть при выборе этих сервисов:</p>
   <ul>
     <li>Cloudflare выдаёт один сертификат на 50 сайтов одновременно. Поэтому он будет принадлежать не только вам, но и сайтам других компаний. А ещё — у него не будет печати доверия.</li>
     <li>Сертификат Let’s Encrypt поддерживает не все браузеры, не гарантирует сохранность данных, а также не имеет печати доверия.</li>
   </ul>
-  
+
   <p>Поэтому иногда стоит выбрать платный сертификат, если важно убедить пользователей, что соединение надёжно защищено.</p>
 
   <h3>Виды SSL-сертификатов</h3>
@@ -101,22 +94,22 @@
     <li>Самоподписанные. Это когда они подписываются на сервере компании. И, по сути, это значит, что его может сделать любой пользователь. Поэтому каждый раз при посещении сайта браузеры будут выдавать предупреждение о незащищённом соединении.</li>
     <li>Подписанные в удостоверяющих центрах. Их получают как раз в удостоверяющих центрах. Их подлинность будет подтверждена во всех браузерах.</li>
   </ol>
-  
+
   <p>Второй тип делится ещё на три вида — по тому, как они проверяют данные:</p>
   <ol>
     <li>DV (domain validation) — умеет шифровать данные, но ничего не знает о компании. Это базовый сертификат, который гораздо дешевле, чем остальные, и который подходит любым компаниям.</li>
     <li>OV (organization validation) — шифрует данные и знает о существовании компании. Подойдёт юридическим лицам.</li>
     <li>EV (extended validation) — нужен тем, кто хочет обеспечить высокий уровень защиты. А чтобы получить его, компания должна пройти сложную проверку: подтвердить законность и предоставить права на домен.</li>
   </ol>
-  
+
   <p>Все они обеспечивают надёжность в шифровании при передаче данных от браузера к серверу. Но также есть другие, более специфичные сертификаты:</p>
   <ul>
     <li>Wildсard — объединяет домены с поддоменами, а также защищает соединение между ними.</li>
     <li>SAN — защищает только те домены, которые указаны в сертификате.</li>
   </ul>
-  
+
   <p>Простым сайтам можно обойтись бесплатным сертификатом, если они, конечно, не используют персональные данные. А вот для тех, кто хочет проводить онлайн-транзакции или создать систему личных профилей, нужно будет приобрести один из подтверждённых сертификатов.</p>
-  
+
   <h3>Как выбрать SSL-сертификат</h3>
   <p>Чтобы не потратить лишние деньги, нужно сначала определить, что делает ваш сайт и какие данные он собирает. Мы рассмотрим некоторые из вариантов и дадим пару советов по выбору.</p>
   <ol>
@@ -126,7 +119,7 @@
     </li>
     <li>Новостной портал. Всё зависит от специфики. Например, если у вас есть медиа, где пользователи входят в свои аккаунты, оставляют комментарии, ставят лайки, то стоит выбрать сертификат OV, чтобы обеспечить надёжность этих данных. Ну а если это новостное издание, где пользователи только читают статьи, можно обойтись DV.</li>
   </ol>
-  
+
   <p>Чтобы выбрать оптимальный сертификат, стоит изучить, что разные центры сертификации предлагают, и учесть следующие пункты:</p>
   <ul>
     <li>совместимость с популярными браузерами</li>
@@ -134,14 +127,14 @@
     <li>сложность проверки компании</li>
     <li>наличие печати доверия</li>
   </ul>
-  
+
   <p>Если каждый из этих пунктов вас устраивает, можно смело приобретать сертификат. </p>
-   
+
   <h3>Где приобрести SSL-сертификат</h3>
   <p>После ухода многих зарубежных компаний купить его стало намного сложнее. Оплатить подписку на иностранных сайтах с помощью российских карт стало невозможно, поэтому приходится выбирать только среди отечественных аналогов. Но аналогов практически нет.</p>
-  
+
   <p>Самый простой способ получить сертификат сегодня — подать заявку на сайте reg.ru. Там можно получить его бесплатно, но при условии, что вы купите у них домен. Также стоит учесть, что этот сервис сотрудничает с удостоверяющим центром GlobalSign, который может закрыть доступ для пользователей из России. Поэтому при покупке учитывайте этот риск.</p>
-  
+
   <p>Минцифры уже пытается разработать нормативную базу, чтобы российские компании могли получать бесплатные сертификаты. Сейчас заказать его можно через портал «Госуслуг». Поэтому советуем оставить заявку там, чтобы получить надёжный сертификат.</p>
 </article>
 
@@ -162,14 +155,14 @@
   <p>Работу SSL-протокола можно описать следующим образом.</p>
 
   <p>Когда вы заходите на сайт, защищённый SSL-протоколом, браузер устанавливает безопасное соединение с сервером сайта. Такое соединение нужно, чтобы вы могли не беспокоясь передавать конфиденциальную информацию — например, пароли или данные от банковских карт.</p>
-  
+
   <p>Как только соединение будет настроено, браузер с помощью криптографического ключа зашифрует сообщение и отправит серверу. Сервер получит этот непонятный текст и расшифрует с помощью своего ключа. Такое общение будет продолжаться до тех пор, пока вы не закроете вкладку.</p>
-  
+
   <p>Пока всё звучит классно — протокол защищает наши данные и общается с сервером на своём языке. Но давайте узнаем, зачем он ещё нужен.</p>
 
   <h3>Зачем нужен SSL-протокол</h3>
   <p>Главная задача SSL— проверить подлинность сайта и установить с ним защищённое соединение. Каждый раз, когда вы заходите на какую-то страницу, браузер убеждается в том, что сайт настоящий, а не поддельный. А также узнаёт, можно ли безопасно передавать сайту личные данные.</p>
-  
+
   <p>Обычно, когда вы заходите на сайт, браузер использует протокол HTTP для передачи данных между клиентом и сервером. Это незащищённый протокол, а значит, данные перехватить может кто угодно. Поэтому поток данных, передаваемых по HTTP придумали шифровать протоколом SSL. Так появился стандарт HTTPS, где S означает secure. По сути, всё его отличие от предшественника как раз и состоит в использовании протокола SSL.</p>
 
   <p>Ещё протокол обеспечивает целостность данных: он защищает их от изменений в процессе передачи. Любые правки, которые внезапно появятся, будут обнаружены, а пользователь получит предупреждение о возможном нарушении безопасности.</p>
@@ -178,9 +171,9 @@
 
   <h3>Чем SSL-протокол отличается от SSL‑сертификата</h3>
   <p>SSL-протокол и SSL-сертификат работают в паре, но выполняют разные функции.</p>
-  
+
   <p>Протокол SSL определяет последовательность действий, которые нужно совершить, чтобы установить защищённое соединение между клиентом и сервером.</p>
-  
+
   <p>Сертификат SSL — это электронный документ. Он-то и содержит информацию о сайте, которая нужна для установки защищенного соединения. Туда входят:</p>
   <ul>
     <li>данные о владельце сертификата</li>
@@ -196,21 +189,21 @@
 
   <h3>Как работает SSL-протокол</h3>
   <p>Пора узнать, как клиент и сервер «жмут друг другу руки» и шифруют данные. Другими словами — как SSL работает на техническом уровне.</p>
-  
+
   <p>Когда вы пытаетесь подключиться к сайту, который защищён SSL, ваш браузер и сервер начинают «рукопожатие». Так называют процесс, когда браузер и сервер обмениваются информацией друг о друге. Для начала — сообщают, какие версии протокола установлены на обоих устройствах.</p>
-  
+
   <p>Затем сервер должен передать вашему браузеру договор «на подпись» — SSL‑сертификат. В нём будет храниться подробная информация о сайте. Но важнее всего — публичный ключ и подпись, которую выдаёт центр сертификации. Они нужны, чтобы проверить, что вы заходите на настоящий сайт, а не на его подделку.</p>
 
   <p>SSL-протокол использует два типа ключей: публичные и приватные.</p>
 
   <p>Публичные известны всем, и их можно получить при первом «рукопожатии» с сервером. Приватные — лежат строго на компьютере и не передаются никому.</p>
-  
+
   <p>Оба ключа нужны, чтобы шифровать данные по алгоритму RSA. Публичный ключ нужен, чтобы шифровать сообщения, а приватный — чтобы расшифровывать. На взлом такого шифра могут уйти миллионы лет. Поэтому не советуем этим заниматься.</p>
 
   <p>Теперь браузер должен убедиться, что сайт настоящий, и проверить подлинность его SSL-сертификата. Для этого он обращается в центр сертификации и отдаёт ему уникальный номер сертификата. Если срок действия сертификата не закончился и он был выдан в надёжном месте, то браузер получит уведомление, что всё ок.</p>
 
   <p>На этот момент соединение считается установленным: сертификат нормальный, публичный ключ у нас. Пора отправлять данные.</p>
-  
+
   <p>Вся информация, что передаётся между браузером и сервером, сначала шифруется на стороне браузера. Он применяет публичный ключ шифрования</p>
 
   <p>Как только текст зашифрован — пора передавать его на сервер. Тот его расшифрует с помощью своего приватного ключа и поймёт, что вы хотите от него получить.</p>
@@ -219,14 +212,14 @@
 
   <h3>Как SSL-протокол шифрует данные</h3>
   <p>Коротко расскажем об алгоритмах шифрования. Всего есть два больших класса алгоритмов — асимметричные и симметричные. Разница между ними только в количестве ключей.</p>
-  
+
   <p>Симметричные используют один общий ключ для шифрования и дешифрования. Ключ известен обеим сторонам — клиенту и серверу. Поэтому нужно не допустить, чтобы он потерялся, — иначе шифрование станет бессмысленным.</p>
-  
+
   <p>Асимметричные используют два ключа — публичный и приватный. Публичный ключ нужен для шифрования данных, поэтому его можно без проблем отправлять кому угодно. Приватный ключ нужен для дешифрования, поэтому его нужно держать в безопасном месте.</p>
-  
+
   <p>В SSL-протоколе два типа шифрования работают вместе. Асимметричное шифрование используют во время «рукопожатия» и аутентификации. Симметричное — для шифрование сообщений.</p>
-  
+
   <p>Вместе с шифрованием используют алгоритмы хеширования.</p>
-  
+
   <p>Хеширование — это способ превратить данные в строку фиксированной длины. Для этого данные пропускают через хеш-функцию, которая получает на их основе уникальную последовательность символов. В будущем по этой строке можно будет определить, редактировался файл или нет. Ведь даже если заменить один символ в текстовом документе, то его хеш изменится до неузнаваемости.</p>
 </article>
