--- a/src/components/front/front-net/pages/elem-websocket.html
+++ b/src/components/front/front-net/pages/elem-websocket.html
@@ -1,21 +1,14 @@
 <h1>WebSocket</h1>
 
-<!-- Заголовок -->
-<div class="article">
-  <div class="anchor" id="content"></div>
-  <h2>Содержание</h2>
-</div>
 
 <!-- Содержание -->
-<div class="article article__content">
+<article class="article">
+  <h2>Содержание</h2>
 
-  <div>
-    <p><a href="#links">links</a></p>
-    <p><a href="#about">Что такое WebSocket</a></p>
-    <p><a href="#api">WebSocket API</a></p>
-  </div>
-
-</div>
+  <p><a href="#links">links</a></p>
+  <p><a href="#about">Что такое WebSocket</a></p>
+  <p><a href="#api">WebSocket API</a></p>
+</article>
 
 
 <!-- links -->
@@ -61,7 +54,7 @@
 
   <p>Чтобы открыть веб-сокет-соединение, нам нужно создать объект new WebSocket, указав в url-адресе специальный протокол ws (или wss)</p>
   <code>let socket = new WebSocket("ws://javascript.info");</code>
-  
+
   <p>Также существует протокол wss://, использующий шифрование. Это как HTTPS для веб-сокетов. Всегда предпочитайте wss://</p>
 
   <p>Протокол wss:// не только использует шифрование, но и обладает повышенной надёжностью.</p>
