--- a/src/components/front/front-node/pages/elem-node-node.html
+++ b/src/components/front/front-node/pages/elem-node-node.html
@@ -32,14 +32,19 @@
 <article class="article">
   <div class="anchor" id="install"></div>
   <h3>Установка</h3>
-  <p>Установим последнюю версию node.js с официального сайта <a
-      href="https://nodejs.org/en/">https://nodejs.org/en/ </a>Вместе с node.js поставится и npm</p>
+  <p>Установим последнюю версию node.js с официального сайта</p>
+  <code><a href="https://nodejs.org/en/">https://nodejs.org/en</a></code>
+  <p>Нажимаем кнопку</p>
+  <code>Download Node.js(LTS)</code>
+  <p>Скачается файл</p>
+  <code>node-v20.17.0-x64</code>
+  <p>Запустим его. Вместе с node.js поставится и npm</p>
   <p>Проверим версии установленных node.js и npm</p>
     <code>
       node -v
-      <br>v18.18.2
+      <br>v20.17.0
       <br>npm -v
-      <br>9.8.1
+      <br>10.8.2
     </code>
     <p>(сокращенно от node --version и npm --version)</p>
   <p>Создадим папку с названием project<code>mkdir project</code>Чтобы удалить пустую папку с названием project
@@ -85,7 +90,7 @@
   <p>При установке пакетов через npm есть два варианта: глобальная и локальная установка.</p>
 
   <p>При глобальной установке пакеты устанавливаются в определенное место в системе, общее для всех проектов. Это удобно, когда пакет является утилитой командной строки, которую необходимо использовать в разных проектах.</p>
-    
+
   <p>В случае локальной установки пакеты устанавливаются в каталог node_modules внутри проекта. Это подходит для пакетов, которые необходимы только для конкретного проекта.</p>
 
   <p>При локальной установке пакеты располагаются в каталоге node_modules, который находится в корневом каталоге проекта.</p>
