--- a/src/components/front/front-tools/pages/elem-tools-tools.html
+++ b/src/components/front/front-tools/pages/elem-tools-tools.html
@@ -1,14 +1,32 @@
 <h2>Инструменты фронтенд разработчика</h2>
 
-<h3>Обзор редакторов</h3>
-<ul>
-  <li><a href="http://htmleditors.ru/">htmleditors.ru</a></li>
-  <li><a href="https://webkato.ru/code-editors-with-plugins/">webkato.ru</a></li>
-</ul>
-<h3>Emmet плагин (2013)</h3>
-<ul>
-  <li><a href="https://emmet.io/">emmet.io</a><br>emmet</li>
-  <li><a href="https://docs.emmet.io/cheat-sheet/">docs.emmet.io</a><br>emmet сокращения</li>
-  <li><a href="https://webdesign-master.ru/blog/html-css/2.html">webdesign-master.ru</a><br>emmet сокращения</li>
-  <li><a href="https://zaurmag.ru/programmy-i-servisy/emmet-doc.html">zaurmag.ru</a><br>emmet сокращения</li>
-</ul>
+
+<!-- Содержание -->
+<article class="article">
+  <h2>Содержание</h2>
+
+  <p><a href="#editor">Обзор редакторов</a></p>
+  <p><a href="#emmet">Emmet</a></p>
+</article>
+
+
+<!-- Обзор редакторов -->
+<article class="article">
+  <div class="anchor" id="editor"></div>
+  <h3>Обзор редакторов</h3>
+
+  <p><a href="http://htmleditors.ru/">htmleditors.ru</a></p>
+  <p><a href="https://webkato.ru/code-editors-with-plugins/">webkato.ru</a></p>
+</article>
+
+
+<!-- Emmet -->
+<article class="article">
+  <div class="anchor" id="emmet"></div>
+  <h3>Emmet плагин (2013)</h3>
+
+  <p><a href="https://emmet.io/">emmet.io</a><br>emmet</p>
+  <p><a href="https://docs.emmet.io/cheat-sheet/">docs.emmet.io</a><br>emmet сокращения</p>
+  <p><a href="https://webdesign-master.ru/blog/html-css/2.html">webdesign-master.ru</a><br>emmet сокращения</p>
+  <p><a href="https://zaurmag.ru/programmy-i-servisy/emmet-doc.html">zaurmag.ru</a><br>emmet сокращения</p>
+</article>
