--- a/src/components/code/algorithm/al-theory/pages/elem-algorithm.html
+++ b/src/components/code/algorithm/al-theory/pages/elem-algorithm.html
@@ -8,6 +8,8 @@
   <p><a href="#links">links</a></p>
   <p><a href="#props">Свойства алгоритмов</a></p>
   <p><a href="#alg">Какой алгоритм выбрать</a></p>
+  <p><a href="#evklid">Алгоритм Евклида</a></p>
+  <p><a href="#turing">Машина Тьюринга</a></p>
 </article>
 
 
@@ -40,10 +42,14 @@
   <div class="anchor" id="props"></div>
   <h2>Свойства алгоритмов</h2>
 
+  <p>Алгоритм это <em>точное предписание</em>, задающее <em>вычислительный процесс</em>, ведущий от <em>начальных данных</em> к <em>искомому результату</em></p>
+
+  <p>Алгоритм должен обладать следующими свойствами</p>
+
   <ol>
     <li><strong>Дискретность</strong> – алгоритм представляется как последовательность инструкций исполнителя. Каждая инструкция выполняется только после того, как закончилось выполнение предыдущей команды.</li>
     <li><strong>Конечность (результативность, финитность)</strong> – алгоритм должен заканчиваться после выполнения конечного числа инструкций.</li>
-    <li><strong>Детерминированность</strong> – каждый шаг алгоритма должен быть однозначно определен – записан на формальном языке исполнителя. Детерминированность обеспечивает совпадение результатов, получаемых при многократном выполнении алгоритма, на одном и том же наборе входных данных.</li>
+    <li><strong>Определенность (детерминированность)</strong> – каждый шаг алгоритма и переход от шага к шагу должены быть однозначно определены. Шаги должны быть записаны на формальном языке исполнителя. Применение алгоритма к одним и тем же исходным данным должно приводить к одинаковому результату.</li>
     <li><strong>Массовость</strong> – алгоритм решения задачи должен быть применим для некоторого класса задач, различающихся лишь значениями входных данных.</li>
   </ol>
 </article>
@@ -56,5 +62,44 @@
 
   <p>Если нет необходимости в обработке большого количества данных, то стоит делать выбор в пользу более понятного и читаемого решения.</p>
   <p>Преждевременная оптимизация - это плохо.</p>
-  <p>Не всехда понятно где граница между большим набором данных и малым.</p>
+  <p>Не всегда понятно где граница между большим набором данных и малым.</p>
 </article>
+
+
+<!-- Алгоритм Евклида -->
+<article class="article">
+  <div class="anchor" id="evklid"></div>
+  <h2>Алгоритм Евклида</h2>
+
+  <p>Алгоритм Евклида для нахождения наибольшего общего делителя натуральных чисел</p>
+  <p>Даны два натуральных числа a и b. Найти НОД(a, b)</p>
+
+  <h4>Алгоритм</h4>
+  <ol>
+    <li>Если a &lt; b, то поменять их местами</li>
+    <li>Получить остаток от деления a на b. r = a % b</li>
+    <li>Если r = 0, то НОД = b</li>
+    <li>Если r != 0, заменить a на b, заменить b на r и вернуться к шагу 2</li>
+  </ol>
+</article>
+
+
+<!-- Машина Тьюринга -->
+<article class="article">
+  <div class="anchor" id="turing"></div>
+  <h2>Машина Тьюринга</h2>
+
+  <p>Появились сомнения, что любую задачу можно алгоритмически разрешить. Появился вопрос: существуют ли задачи, для которых нельзя построить алгоритм вообще? Невозможно доказать, что задача алгоритмически неразрешима, то есть алгоритм ее решения никогда не удастся построить.</p>
+
+  <h4>Тезис Тьюринга-Черча</h4>
+  <p>Для любой интуитивно вычислимой функции существует вычисляющая ее значения машина Тьюринга.</p>
+  <p>Тезис Тьюринга-Черча невозможно строго доказать или опровергнуть, так как он устанавливает эквивалентность между строго формализованным понятием частично вычислимой функции и неформальным понятием вычислимости.</p>
+
+  <h4>Формализация</h4>
+  <p>Чтобы формализовать информацию, можно считать, что все данные записываются в виде некоторых символов, эти символы составляются в последовательности.</p>
+  <p>Последовательность этих символов и есть данные.</p>
+  <p>Алфавит – это конечное множество</p>
+  <code>𝐴𝑝 = {𝑎1, 𝑎2, … , 𝑎𝑝}.</code>
+  <p>Элементы алфавита 𝐴𝑝 называются символами.</p>
+</article>
+
