--- a/src/components/front/front-base/pages/elem-principle.html
+++ b/src/components/front/front-base/pages/elem-principle.html
@@ -1,32 +1,20 @@
 <h1>Принципы разработки</h1>
 
-<!-- Заголовок -->
-<div class="article">
-  <div class="anchor" id="content"></div>
-  <h2>Содержание</h2>
-</div>
 
 <!-- Содержание -->
-<div class="article article__content">
-
-  <div>
-    <p><a href="#about">about</a></p>
-    <p><a href="#links">links</a></p>
-    <p><a href="#dry">DRY</a></p>
-    <p><a href="#kiss">KISS</a></p>
-    <p><a href="#yagni">YAGNI</a></p>
-    <p><a href="#solid">SOLID</a></p>
-    <p><a href="#bduf">BDUF</a></p>
-    <p><a href="#okkama">Бритва Оккама</a></p>
-    </div>
-
-</div>
-
-
-<!-- about -->
 <article class="article">
-  <div class="anchor" id="about"></div>
-  <h2>about</h2>
+  <h2>Содержание</h2>
+
+  <p><a href="#links">links</a></p>
+  <p><a href="#princip">Принципы разработки</a></p>
+  <ol>
+    <li><a href="#dry">DRY</a></li>
+    <li><a href="#kiss">KISS</a></li>
+    <li><a href="#yagni">YAGNI</a></li>
+    <li><a href="#solid">SOLID</a></li>
+    <li><a href="#bduf">BDUF</a></li>
+    <li><a href="#okkama">Бритва Оккама</a></li>
+  </ol>
 </article>
 
 
@@ -40,10 +28,17 @@
 </article>
 
 
+<!-- Принципы разработки -->
+<article class="article">
+  <div class="anchor" id="princip"></div>
+  <h2>Принципы разработки</h2>
+</article>
+
+
 <!-- dry -->
 <article class="article">
   <div class="anchor" id="dry"></div>
-  <h2>DRY. Don’t Repeat Yourself / Не повторяйтесь</h2>
+  <h3>1. DRY. Don’t Repeat Yourself / Не повторяйтесь</h3>
 
   <p>Дублирование кода – пустая трата времени и ресурсов. Вам придется поддерживать одну и ту же логику и тестировать код сразу в двух местах, причем если вы измените код в одном месте, его нужно будет изменить и в другом.</p>
 </article>
@@ -52,7 +47,7 @@
 <!-- kiss -->
 <article class="article">
   <div class="anchor" id="kiss"></div>
-  <h2>KISS. Keep It Simple, Stupid / Будь проще</h2>
+  <h3>2. KISS. Keep It Simple, Stupid / Будь проще</h3>
 
   <p>Простые системы будут работать лучше и надежнее. Не придумывайте к задаче более сложного решения, чем ей требуется. Иногда самое разумное решение оказывается и самым простым. Написание производительного, эффективного и простого кода – это прекрасно.</p>
 </article>
@@ -61,7 +56,7 @@
 <!-- yagni -->
 <article class="article">
   <div class="anchor" id="yagni"></div>
-  <h2>YAGNI. You Aren’t Gonna Need It / Вам это не понадобится</h2>
+  <h3>3. YAGNI. You Aren’t Gonna Need It / Вам это не понадобится</h3>
 
   <p>Не пишите код, если думаете, что он пригодится позже.</p>
 </article>
@@ -70,28 +65,28 @@
 <!-- solid -->
 <article class="article">
   <div class="anchor" id="solid"></div>
-  <h2>SOLID</h2>
+  <h3>4. SOLID</h3>
 
   <p>Solid — это аббревиатура от:</p>
   <ol>
     <li>
-      <h3>S. Single-responsibility principle /Принцип единственной ответственности</h3>
+      <h4>S. Single-responsibility principle /Принцип единственной ответственности</h4>
       <p>Каждый объект, класс и метод должны отвечать только за что-то одно. Если ваш объект/класс/метод делает слишком много, вы получите спагетти-код.</p>
     </li>
     <li>
-      <h3>O. Open–closed principle / Принцип открытости-закрытости</h3>
+      <h4>O. Open–closed principle / Принцип открытости-закрытости</h4>
       <p>Программные объекты должны быть открыты для расширения, но закрыты для модификации. Речь о том, что нельзя переопределять методы или классы, просто добавляя дополнительные функции по мере необходимости. Хороший способ решения этой проблемы – использование наследования. В JavaScript эта проблема решается с помощью композиции. Простое правило: если вы изменяете сущность, чтобы сделать ее расширяемой, вы впервые нарушили этот принцип.</p>
     </li>
     <li>
-      <h3>L. Liskov substitution principle / Принцип подстановки Барбары Лисков</h3>
+      <h4>L. Liskov substitution principle / Принцип подстановки Барбары Лисков</h4>
       <p>Этот принцип гласит, что объекты старших классов должны быть заменимы объектами подклассов, и приложение при такой замене должно работать так, как ожидается.</p>
     </li>
     <li>
-      <h3>I. Interface segregation principle / Принцип разделения интерфейсов</h3>
+      <h4>I. Interface segregation principle / Принцип разделения интерфейсов</h4>
       <p>Этот принцип был сформулирован Робертом Мартином, когда он консультировал Xerox, и он очевиден. Объекты не должны зависеть от интерфейсов, которые они не используют. ПО должно разделяться на независимые части. Побочные эффекты необходимо сводить к минимуму, чтобы обеспечивать независимость. Убедитесь, что вы не заставляете объекты реализовывать методы, которые им никогда не понадобятся.</p>
     </li>
     <li>
-      <h3>D) Dependency inversion principle / Принцип инверсии зависимостей</h3>
+      <h4>D. Dependency inversion principle / Принцип инверсии зависимостей</h4>
       <p>Мы должны полагаться на абстракции, а не на конкретные реализации. Компоненты ПО должны иметь низкую связность и высокую согласованность. Заботиться нужно не о том, как что-то устроено, а о том, как оно работает. Иногда добавление этого уровня абстракции требует усилий, но в конечном итоге они окупаются.</p>
     </li>
   </ol>
@@ -101,7 +96,7 @@
 <!-- bduf -->
 <article class="article">
   <div class="anchor" id="bduf"></div>
-  <h2>BDUF. Big design up front / Глобальное проектирование прежде всего</h2>
+  <h3>5. BDUF. Big design up front / Глобальное проектирование прежде всего</h3>
 
   <p>Прежде чем переходить к реализации, убедитесь, что все хорошо продумано. Зачастую продумывание решений избавляло нас от проблем при разработке… Внесение изменений в спецификации занимало час или два. Если бы мы вносили эти изменения в код, на это уходили бы недели. Многие разработчики считают, что если они не пишут код, то они не добиваются прогресса. Это неверный подход. Составив план, вы избавите себя от необходимости раз за разом начинать с нуля.</p>
 </article>
@@ -110,7 +105,7 @@
 <!-- okkama -->
 <article class="article">
   <div class="anchor" id="okkama"></div>
-  <h2>Бритва Оккама</h2>
+  <h3>6. Бритва Оккама</h3>
 
   <ol>
     <li>Не нужно создавать лишние сущности без необходимости в них.</li>
