--- a/src/components/front/front-base/pages/elem-structure.html
+++ b/src/components/front/front-base/pages/elem-structure.html
@@ -5,7 +5,7 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p><a href="#links">Links</a></p>
+  <p><a href="#links">links</a></p>
   <p><a href="#struct">Структуры данных</a></p>
   <ol>
     <li><a href="#array">Массив (Array)</a></li>
@@ -22,14 +22,14 @@
     <li><a href="#trie">Префиксное дерево (Trie)</a></li>
     <li><a href="#binary-heap">Двоичная куча (Binary heap)</a></li>
   </ol>
-  <p><a href="struct-js">Структуры данных в JS</a></p>
+  <p><a href="#struct-js">Структуры данных в JS</a></p>
 </article>
-  
+
 
 <!-- links -->
 <article class="article">
   <div class="anchor" id="links"></div>
-  <h2>Links</h2>
+  <h2>links</h2>
 
   <p><a href="https://practicum.yandex.ru/blog/10-osnovnyh-struktur-dannyh/">10 структур данных, которые должен знать каждый разработчик</a> (Сергей Савельев, Лена Шпрингер 2022.08.10 5 мин)</p>
   <p><a href="https://blog.skillfactory.ru/glossary/struktura-dannyh/">Структура данных</a> (2023.03.25)</p>
@@ -40,7 +40,7 @@
 <article class="article">
   <div class="anchor" id="struct"></div>
   <h2>Структуры данных</h2>
-  
+
   <p>Структура данных — это способ организации информации для более эффективного использования. В программировании структурой обычно называют набор данных, связанных определённым образом. Например, массив — это структура.</p>
   <p>Со структурой можно работать: добавлять данные, извлекать их и обрабатывать, например изменять, анализировать, сортировать. Для каждой структуры данных — свои алгоритмы. Работа программиста — правильно выбирать уже написанные готовые либо писать свои.</p>
   <p>Главное свойство структур данных в том, что у любой единицы данных должно быть чёткое место, по которому её можно найти. Как определяется это место и как происходит поиск, зависит от конкретной структуры.</p>
@@ -51,18 +51,18 @@
     <li>Существуют алгоритмы, которые позволяют взаимодействовать с этой структурой.</li>
   </ul>
   <p>При этом данных необязательно должно быть много. Массив из одного элемента — уже структура данных.</p>
-  
+
   <h3>Зачем нужны структуры данных</h3>
   <p>Структуры нужны, чтобы упорядочивать, искать, анализировать и использовать данные с применением алгоритмов программирования.</p>
   <p>Фактически использование структур данных в программировании начинается ещё с задания переменной. Формат переменной — определённая структура данных, так как в память переменная записывается конкретным способом. Но на практике программисты работают с другими структурами, которые объединяют в себе разные переменные и типы данных. Далее приведем описание и классификацию основных структур данных, чтобы было удобнее в них разобраться.</p>
   <p>Структуру данных для работы выбирают в зависимости от задачи. Если нужно что-то простое, подойдёт обычный массив. Когда требуется создать очередь или историю запросов, выбирают связный список или очередь. Если нужен поиск и сортировка, поможет двоичное дерево. Именно поэтому важно знать все типы данных в программировании, чтобы подбирать оптимальный в любой ситуации.</p>
   </article>
-  
+
 
 <!-- array -->
 <article class="article">
   <div class="anchor" id="array"></div>
-  <h2>1. Массив (Array)</h2>
+  <h3>1. Массив (Array)</h3>
 
   <p>Одна из самых простых структур данных, которая встречается чаще всего. Именно на массивах основаны многие другие структуры данных: списки, стеки, очереди.</p>
   <p>Для простоты восприятия можно считать, что массив — это таблица. Каждый его элемент имеет индекс — «адрес», по которому этот элемент можно извлечь. В большинстве языков программирования индексы начинаются с нуля. То есть первый элемент массива имеет индекс не [1], а [0]. Данные в массиве можно просматривать, сортировать и изменять с помощью специальных операций.</p>
@@ -72,7 +72,7 @@
     <li>Многомерные. У каждого элемента два или больше индексов. По сути, это комбинация из нескольких одномерных массивов, то есть вложенная структура.</li>
   </ul>
   <p>Основное отличие между одномерным и многомерным массивом ― их размерность и способ организации данных. Одномерный массив ― простая линейная структура данных, многомерный ― более сложная структура данных с несколькими измерениями</p>
-  
+
   <h3>Как применяют массивы:</h3>
   <ul>
     <li>В качестве блоков для более сложных структур данных. Массивы предусмотрены в синтаксисе большинства языков программирования, и на их основе удобно строить другие структуры.</li>
@@ -85,7 +85,7 @@
 <!-- dynamic-array -->
 <article class="article">
   <div class="anchor" id="dynamic-array"></div>
-  <h2>2. Динамический массив (Dynamic array)</h2>
+  <h3>2. Динамический массив (Dynamic array)</h3>
 
   <p>В классическом массиве размер задан заранее — мы точно знаем, сколько в нём индексов. А динамический массив — это тот, у которого размер может изменяться. При его создании задаётся максимальная величина и количество заполненных элементов. При добавлении новых элементов они сначала заполняются до максимальной величины, а при превышении сразу создаётся новый массив, с большей максимальной величиной.</p>
   <p>Элементы в динамический массив можно добавлять без ограничений и куда угодно. Однако, если добавлять их в середину, остальные придётся сдвигать, что занимает много времени. Поэтому лучше всего динамический массив работает при добавлении элементов в конце.</p>
@@ -101,13 +101,13 @@
 <!-- queue -->
 <article class="article">
   <div class="anchor" id="queue"></div>
-  <h2>3. Очередь (Queue)</h2>
+  <h3>3. Очередь (Queue)</h3>
 
   <p>Этот вид структуры представляет собой ряд данных, как и стек. Но в отличие от него она работает по принципу FIFO — First In, First Out (англ. «первым пришёл — первым ушёл»). Данные добавляют в конец, а извлекают из начала.</p>
   <p>В этой структуре данных всегда работают только с первым элементом. Остальные в это время «ждут своей очереди»</p>
   <p>Бывают неклассические, двусторонние очереди. В них можно добавлять элементы и извлекать их из начала и конца структуры. Элементы посередине недоступны.</p>
 
-  <h3>Как применяют очереди:</h3>  
+  <h3>Как применяют очереди:</h3>
   <ul>
     <li>Для реализации очередей, например на доступ к определённому ресурсу.</li>
     <li>Для управления потоками в многопоточных средах.</li>
@@ -120,7 +120,7 @@
 <!-- stack -->
 <article class="article">
   <div class="anchor" id="stack"></div>
-  <h2>4. Стек (Stack)</h2>
+  <h3>4. Стек (Stack)</h3>
 
   <p>Эта структура данных позволяет добавлять и удалять элементы только из начала. Она работает по принципу LIFO — Last In, First Out (англ. «последним пришёл — первым ушёл»). Последний добавленный в стек элемент должен будет покинуть его раньше остальных.</p>
   <p>Просмотреть стек можно целиком, а работать — только с вершиной. Для этого надо удалить или добавить последний элемент</p>
@@ -137,7 +137,7 @@
 <!-- deck -->
 <article class="article">
   <div class="anchor" id="deck"></div>
-  <h2>5. Дек (Deck)</h2>
+  <h3>5. Дек (Deck)</h3>
 
   <p>Деками называют двусторонние очереди: они объединяют возможности и очереди, и стека. Такие структуры данных могут работать и по принципу FIFO, и по принципу LIFO. Доступ к элементам возможен с любого конца.</p>
   <p><strong>Операции.</strong> Можно сказать, что деки объединяют в себе операции, характерные для очередей и стеков. В каком-то смысле эти структуры данных напоминают массивы и приближены к ним по функциональности.</p>
@@ -148,7 +148,7 @@
 <!-- linked-list -->
 <article class="article">
   <div class="anchor" id="linked-list"></div>
-  <h2>6. Связный список (Linked list)</h2>
+  <h3>6. Связный список (Linked list)</h3>
 
   <p>Ещё одна базовая структура данных, которую, как и массивы, используют для реализации других структур. Связный список — это группа из узлов. В каждом узле содержатся:</p>
   <ul>
@@ -157,7 +157,7 @@
     <li>В некоторых списках — ещё и ссылка на предыдущий узел.</li>
   </ul>
   <p>В итоге получается список, у которого есть чёткая последовательность элементов. При этом сами элементы более разрозненны, чем в массиве, поскольку хранятся отдельно. Быстро перемещаться между элементами списка помогают указатели.</p>
-  
+
   <h3>Как применяют связные списки:</h3>
   <ul>
     <li>Для построения более сложных структур данных.</li>
@@ -171,7 +171,7 @@
 <!-- set -->
 <article class="article">
   <div class="anchor" id="set"></div>
-  <h2>7. Множество (Set)</h2>
+  <h3>7. Множество (Set)</h3>
 
   <p>В отличие от предыдущих базовых структур, во множестве данные не упорядочены. Они хранятся группой, их нельзя структурировать и в некоторых случаях нельзя сортировать. Зато с ними можно работать как с классическими математическими множествами: объединять, искать пересечения, вычислять разность и смотреть, является ли одно множество подмножеством другого.</p>
   <p>Обычно во множество помещают объекты, у которых есть что-то общее. Важны свойства объектов, а их порядок значения не имеет</p>
@@ -188,11 +188,11 @@
 <!-- map -->
 <article class="article">
   <div class="anchor" id="map"></div>
-  <h2>8. Карта (Map). Ассоциативный массив, словарь</h2>
+  <h3>8. Карта (Map). Ассоциативный массив, словарь</h3>
 
   <p>Её ещё называют ассоциативным массивом или словарём. Данные здесь хранятся в паре «ключ/значение», причем каждый ключ уникален, а вот значения могут повторяться. То есть определённому уникальному ключу всегда соответствует конкретное значение.</p>
   <p>Зная ключ, данные в Map можно искать быстрее, чем в других структурах</p>
-  
+
   <h3>Как применяют Карту:</h3>
   <ul>
     <li>Для быстрого поиска данных.</li>
@@ -205,7 +205,7 @@
 <!-- hash-tables -->
 <article class="article">
   <div class="anchor" id="hash-tables"></div>
-  <h2>9. Хэш-таблицы (Hash-tables)</h2>
+  <h3>9. Хэш-таблицы (Hash-tables)</h3>
 
   <p>Эта структура данных похожа на ассоциативный массив и иногда реализуется через него. Разница в том, что ключ для каждого значения задается автоматически с помощью специальной формулы — хэш-формулы. Эта формула применяется к самому значению — в результате генерируется ключ, основанный на нем.</p>
   <p>С помощью хэш-таблицы можно генерировать ключи автоматически, например, в ситуациях, когда их название не должно нести полезной нагрузки. Это удобнее и быстрее, чем словарь, если речь идет о больших объемах данных. Кроме того, использование хэшей позволяет шифровать информацию — правда, одной таблицы для этого недостаточно.</p>
@@ -218,7 +218,7 @@
 <!-- graph -->
 <article class="article">
   <div class="anchor" id="graph"></div>
-  <h2>10. Граф (Graph)</h2>
+  <h3>10. Граф (Graph)</h3>
 
   <p>Граф — это более общий случай дерева. Иногда деревья называют ациклическими графами. Отличий у этих структур данных два:</p>
   <ul>
@@ -241,7 +241,7 @@
 <!-- binary-search-tree -->
 <article class="article">
   <div class="anchor" id="binary-search-tree"></div>
-  <h2>11. Двоичное дерево поиска (Binary search tree)</h2>
+  <h3>11. Двоичное дерево поиска (Binary search tree)</h3>
 
   <p>Дерево — это структура, данные в которой лежат в узлах. У каждого узла могут быть один или несколько дочерних и только один родитель, то есть они расходятся, как ветви дерева:</p>
   <p>Деревья бывают разных типов, но наиболее распространены двоичные деревья поиска. У них есть следующие особенности:</p>
@@ -262,11 +262,11 @@
 <!-- trie -->
 <article class="article">
   <div class="anchor" id="trie"></div>
-  <h2>12. Префиксное дерево (Trie)</h2>
+  <h3>12. Префиксное дерево (Trie)</h3>
 
   <p>Другие названия этой структуры данных — Бор и нагруженное дерево. Данные в нём хранятся последовательно: каждый узел — это префикс, по которому находятся следующие узлы.</p>
 
-  <h3>Как применяют префиксные деревья:</h3>  
+  <h3>Как применяют префиксные деревья:</h3>
   <ul>
     <li>Для хранения данных, которые нужно выдавать по цепочке. Например, слова для функции автозаполнения в телефоне: в зависимости от одной набранной буквы дерево выдаёт следующие.</li>
     <li>Для хранения данных, у которых есть повторяющиеся участки. Например IP-адресов.</li>
@@ -277,7 +277,7 @@
 <!-- binary-heap -->
 <article class="article">
   <div class="anchor" id="binary-heap"></div>
-  <h2>13. Двоичная куча (Binary heap)</h2>
+  <h3>13. Двоичная куча (Binary heap)</h3>
 
   <p>Двоичные кучи — двоичные деревья, заполненные целиком. У каждого узла два потомка. Потомки в зависимости от типа дерева должны быть строго больше предков или меньше либо равны им.</p>
 </article>
