--- a/src/components/front/front-net/pages/elem-api.html
+++ b/src/components/front/front-net/pages/elem-api.html
@@ -1,22 +1,15 @@
 <h1>API (Application Programming Interface)</h1>
 
-<!-- Заголовок -->
-<div class="article">
-  <div class="anchor" id="content"></div>
-  <h2>Содержание</h2>
-</div>
 
 <!-- Содержание -->
-<div class="article article__content">
+<article class="article">
+  <h2>Содержание</h2>
 
-  <div>
-    <p><a href="#links">links</a></p>
-    <p><a href="#about">Что такое API</a></p>
-    <p><a href="#type">Типы API</a></p>
-    <p><a href="#protocol">Протоколы  API</a></p>
-  </div>
-
-</div>
+  <p><a href="#links">links</a></p>
+  <p><a href="#about">Что такое API</a></p>
+  <p><a href="#type">Типы API</a></p>
+  <p><a href="#protocol">Протоколы  API</a></p>
+</article>
 
 
 <!-- links -->
